Fri Feb 12 10:20:20 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* login.c (read_env_vars_from_file): Fix so that it uses
		passed-in filename instead of the hard-coded to
		/etc/environment.  [krb5-appl/691]

Wed Jan 20 21:42:41 1999  Tom Yu  <tlyu@mit.edu>

	* login.c (main): Call setluid().

	* krshd.c (doit): Call setluid().

	* configure.in: Check for setluid() rather than main() in
	libsecurity.

Sat Aug 15 00:01:15 1998  Geoffrey King  <gjking@mit.edu>

	* krcp.c (error): Don't call rcmd_stream_write if iamremote is not
 	set, because it expects a valid file descriptor [krb5-appl/359].
  	Also, remove mistakenly duplicated comment above the function.

Mon Jul 27 00:06:20 1998  Geoffrey King  <gjking@mit.edu>

	* krlogin.c (main): Apply ghudson's patch so that rlogin -a
	no longer dumps core. [krb5-appl/612]

Sat May 16 16:07:42 1998  Tom Yu  <tlyu@mit.edu>

	* login.c: Replace strcpy with strncpy in places.  Add nul
	termination to some existing invocations of strncpy.

Tue Jan 20 21:42:06 1998  Tom Yu  <tlyu@mit.edu>

	* krlogind.c (protocol): Declare pibuf and fibuf as being BUFSIZ
	bytes long, rather than 1024.  Fixes an Irix bug. [krb5-appl/527]

Thu Nov 20 16:42:54 1997  Tom Yu  <tlyu@mit.edu>

	* krlogind.c (recvauth): Fix args in call to
 	rd_and_store_for_creds. [krb5-appl/502]

Mon Nov 17 20:55:31 1997  Tom Yu  <tlyu@mit.edu>

	* krshd.c: Don't set checksum_ignored to 1 if checksum_required is
	0; also, if a krb5 client passes in a checksum, check it
	regardless of whether checksum_required is true. [krb5-appl/500]

Wed Nov 12 19:03:02 1997  Tom Yu  <tlyu@mit.edu>

	* forward.c (rd_and_store_for_creds): Don't do the chown.  Avoids
	a security hole. [krb5-appl/494]

	* krshd.c (recvauth): chown the ccache explicitly, as
	rd_and_store_for_creds no longer does so. [krb5-appl/494]

Thu Nov  6 22:04:26 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* v4rcp.c: Use error_message(errno) instead of using
 		sys_errlist[errno].  This avoids the hair of deciding